Remove dependency on commons-io.